Multi server update